Make sure header buttons don't get squished

--- a/wp-content/themes/citylimits/less/header.less
+++ b/wp-content/themes/citylimits/less/header.less
@@ -101,6 +101,9 @@
             padding: 10px 15px;
             &:not(:last-of-type) {
                 margin-right: @measure;
+                @media (max-width: 899px) and (min-width: 770px) {
+                    margin: @measure - 1rem;
+                }
                 @media (max-width: 769px) {
                     margin-right: 10px;
                 }
@@ -121,6 +124,9 @@
                 &:hover {
                     background: @red;
                     border: 1px solid @red;
+                }
+                @media (max-width: 899px) and (min-width: 770px) {
+                    padding: 10px 20px;
                 }
             }
             @media (max-width: 860px) {
